# bazel_milr_demo

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-bazel_mlir_demo  bazel-bin  bazel-out  bazel-testlogs  extension.bzl  generated_targets.txt  gentbl_cc_lib.bzl  lit.bzl  main.cpp  requirements.txt
.clwb/aspects/: cc_info.bzl  fast_build_info_bundled.bzl  intellij_info_bundled.bzl  java_info.bzl  python_info.bzl
Tools/Peng-opt/: Peng-opt.cpp
include/: DistributeParallelismAttrInterfaces.td  DistributeParallelismInterfaces.h  DistributeParallelismOpInterfaces.td  FusionRegionInterfaces.h  FusionRegionInterfaces.td  PengAttrs.h  PengAttrs.td  PengConstraints.td  PengDialect.h  PengDialect.td  PengEnums.h  PengEnums.td  PengOps.h  PengOps.td  PengTypeInterface.h  PengTypeInterface.td  PengTypes.h  PengTypes.td
include/Conversion/: Passes.h  Passes.td
include/Conversion/PengToLinalg/: PengToLinalg.h
include/Pipelines/: Pipelines.h
include/Transforms/: Passes.h  Passes.td
include/Utils/: File.h  Key.h
src/: DistributeParallelismInterfaces.cpp  FusionRegionInterfaces.cpp  PengAttrs.cpp  PengCanonicalize.cpp  PengDialect.cpp  PengEnums.cpp  PengOps.cpp  PengTypeInterface.cpp  PengTypes.cpp
src/Conversion/PengToLinalg/: PengToLinalg.cpp  PengToLinalgPass.cpp
src/Pipelines/: PengBasicPipeline.cpp
src/TransForms/: ApplyDistributeTransform.cpp  DeviceRegionFusion.cpp  MarkDistributeParallelParameters.cpp
src/Utils/: File.cpp
test/: BUILD.bazel  lit.cfg.py  softmax.mlir
test/Conversion/: peng_to_linalg.mlir
test/Peng/: apply-distribute-transform.mlir  device-region-fusion.mlir  fold.mlir  mark-distribute-parallel-parameters.mlir
tests/: BUILD.bazel  lit.cfg.py
tests/Conversion/: peng_to_linalg.mlir
tests/Peng/: apply-distribute-transform.mlir  device-region-fusion.mlir  fold.mlir
