#use_extension("@build_bazel_rules_nodejs //:index.bzl", "yarn_install")

###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to BUILD.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "bazel_milr_demo",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc", version = "0.2.2")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")
bazel_dep(name = "container_structure_test", version = "1.16.0")
bazel_dep(name = "rules_jvm_external", version = "6.3")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "fmt", version = "11.2.0")
#bazel_dep(name = "ffmpeg_bazel_build", version = "8.11.0")
#git_override(
#    module_name = "ffmpeg_bazel_build",
#    commit = "01e1d136f85af8be10453224dcf7445f0d1bcabd",
#    remote = "https://github.com/jonnrb/bazel_ffmpeg.git",
#)

# File: MODULE.bazel
bazel_dep(name = "rules_python", version = "1.5.0")
bazel_dep(name = "platforms", version = "1.0.0")

# 引入 rules_nodejs
bazel_dep(name = "rules_nodejs", version = "6.5.0")

PYTHON_VERSION = "3.12"

# Configure Python toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")
bazel_dep(name = "glog", version = "0.5.0", repo_name = "com_github_google_glog")



# Patch bazel skylib 1.7.1 with a local patch file.
bazel_dep(name = "bazel_skylib", version = "1.7.1")


llvm = use_extension("//:llvm_extension.bzl", "llvm")
use_repo(
    llvm,
    "llvm-project",
    "llvm_zlib",
    "llvm_zstd",
)


